--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
 Шо по чём хоккей с мечом ©Сіма<p></p>
 
 <!-- for new quotes -->
-<!-- <p></p>
+Питання на засипочку, щоб засипати ©Лена<p></p>
+Я готувалася тільки до історії музики, в мене голові тільки деспасіто а не диспозиція ©Даша Харченко<p></p>
 <p></p>
 <p></p>
-<p></p> -->
     
 </div>
 
